--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ async function init() {
 <!-- CODE GOES HERE -->
 const data = await d3.csv('Data_Breaches_EN_V2_2004_2017_20180220.csv');
 
+console.log(data)
+
 var margin = 50
 var hxw = 200
 
