--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
 <script>
 async function init() {
 <!-- CODE GOES HERE -->
-const data = await d3.csv('Data_Breaches_EN_V2_2004_2017_20180220.csv', function(d){
+const data = await d3.csv('https://docs.google.com/spreadsheets/d/1m87m-WGTWL0eAOJ-0_OCkOhXXvr4mofHY4woxhVloy8/edit?usp=sharing', function(d){
 	return {
 		entity: d.Entity,
-		alternativeName: d.Alternative_Name,
+		alternativeName: d.AlternativeName,
 		story: d.Story,
 		year: d.Year,
-		recordsLost: d.Records_Lost,
+		recordsLost: d.RecordsLost,
 		sector: d.Sector,
-		methodOfLeak: d.Method_of_Leak
+		methodOfLeak: d.MethodofLeak
 	};
 });
 
 console.log(data)
 
-var margin = 50
-var hxw = 200
+var margin = 80
+var hxw = 600
 
 var x = d3.scaleBand().domain([2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017]).range([0,hxw]);
 var y = d3.scaleLinear().domain([0,1370000000]).range([hxw,0]);
@@ -34,8 +34,8 @@ d3.select("svg")
 	.attr("transform","translate("+margin+","+margin+")")
 	.selectAll("circle").data(data)
 	.enter().append("circle")
-	.attr("cx", function(d,i){ return x(d.Year);})
-	.attr("cy", function(d,i){ return y(d.Records_Lost);})
+	.attr("cx", function(d,i){ return x(d.year);})
+	.attr("cy", function(d,i){ return y(d.recordsLost);})
 	.attr("r", 4);
 
 d3.select("svg").append("g")
