--- a/index.html
+++ b/index.html
@@ -7,51 +7,40 @@
 <script>
 async function init() {
 <!-- CODE GOES HERE -->
-const data = await d3.csv('https://docs.google.com/spreadsheets/d/160elOslLzUCHKEZGHIiHqU5Yq_HNjIllFtTCSKam_hQ/edit?usp=sharing', function(d){
-    return { date : d3.timeParse("%Y-%m-%d")(d.Date),
-			 city : d.City,
-			 state : d.state,
-			 dead : d.dead,
-			 injured : d.injured,
-			 total : d.total,
-			 description : d.description,
-			 year : d.year
-  };
+const data = await d3.csv("https://flunky.github.io/cars2017.csv", function(d){
+	return {
+		make: d.Make,
+		fuel: d.Fuel,
+		engineCylinders: d.EngineCylinders,
+		averageHighwayMPG: d.AverageHighwayMPG,
+		averageCityMPG: d.AverageCityMPG
+	};
 });
 
-console.log(data)
-
-var margin = 80
+var margin = 50
 var hxw = 600
 
-var x = d3.scaleTime().domain(d3.extent(data, function(d) { return d.date; })).range([ 0, width ]);
-var y = d3.scaleLinear().domain([0, d3.max(data, function(d) { return +d.dead; })]).range([ height, 0 ]);
-
-//var x = d3.scaleBand().domain([2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017]).range([0,hxw]);
-//var y = d3.scaleLinear().domain([0,1370000000]).range([hxw,0]);
+var x = d3.scaleLog().domain([10,150]).range([0,hxw]);
+var y = d3.scaleLog().domain([10,150]).range([hxw,0]);
 
 d3.select("svg")
 	.attr("width",hxw + 2*margin)
 	.attr("height",hxw + 2*margin)
 	.append("g")
 	.attr("transform","translate("+margin+","+margin+")")
-	.selectAll("path").data(data)
-	.enter().append("path")
-      .attr("fill", "none")
-      .attr("stroke", "steelblue")
-      .attr("stroke-width", 1.5)
-      .attr("d", d3.line()
-        .x(function(d) { return x(d.date) })
-        .y(function(d) { return y(d.dead) })
-        )
+	.selectAll("circle").data(data)
+	.enter().append("circle")
+	.attr("cx", function(d,i){ return x(d.averageCityMPG);})
+	.attr("cy", function(d,i){ return y(d.averageHighwayMPG);})
+	.attr("r",function(d,i){ return +d.engineCylinders + 2;});
 
 d3.select("svg").append("g")
 	.attr("transform","translate("+margin+","+margin+")")
-	.call(d3.axisLeft(y));
+	.call(d3.axisLeft(y).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")));
 	
 d3.select("svg").append("g")
 	.attr("transform","translate("+margin+","+(hxw+margin)+")")
-	.call(d3.axisBottom(x));
+	.call(d3.axisBottom(x).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")));
 
 <!-- CODE ENDS HERE-->
 }
