--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ d3.select("svg")
 	.attr("r",function(d,i){ return +d.engineCylinders + 2;})
 	.on("mouseover", function(){return tooltip.style("visibility", "visible");})
 	.on("mouseover", function(){return tooltip.style("left", (d3.event.pageX) + "px");})
-	.on("mouseover", function(){return tooltip.style("top", (d3.event.pageY - 28) + "px");});
+	.on("mouseover", function(){return tooltip.style("top", (d3.event.pageY - 28) + "px");})
 	.on("mouseover", function(d){return tooltip.text(d.make);});
 
 d3.select("svg").append("g")
