--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ d3.select("svg").append("g")
     .attr("transform","translate("+(hxw/2)+","+margin+")")
     .text("City MPG");
 	
-var div = d3.select("body").append("div")	
+var tooltip = d3.select("body").append("div")	
     .attr("class", "tooltip")				
 	.style("visibility", "hidden");
 
