--- a/index2.html
+++ b/index2.html
@@ -120,8 +120,8 @@ d3.select("svg")
 	.attr("cx", function(d,i){ return x(d.averageCityMPG);})
 	.attr("cy", function(d,i){ return y(d.averageHighwayMPG);})
 	.attr("r",function(d,i){ return +d.engineCylinders + 2;})
-	.on("mouseover", function(d){ tooltip.style("opacity", 1);})
-	.on("mouseover", function(d){ tooltip.style("left", (d3.event.pageX) + "px").style("top", (d3.event.pageY - 28) + "px");})
+	.on("mouseover", function(){ tooltip.style("opacity", 1);})
+	.on("mouseover", function(){ tooltip.style("left", (d3.event.pageX) + "px").style("top", (d3.event.pageY - 28) + "px");})
 	.on("mouseover", function(d){ tooltip.text(d.make);});
 
 d3.select("svg").append("g")
