--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@ body {font-family: "Lato", sans-serif}
 
   <!-- The Band Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">THE BAND</h2>
-    <p class="w3-opacity"><i>We love music</i></p>
-    <p class="w3-justify">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <h2 class="w3-wide">Fuel Efficiency</h2>
+    <p class="w3-opacity"><i>Is your car as efficient as you thought?</i></p>
+    <p class="w3-justify">Cars are the driving force or the economy (no pun intended), as they allow us to travel to work, buy necesary items, and see our loved ones.
+	However, your car could be burning a major hole in your pocket. Below is a graph of fuel efficiency of many different car makes, with the size of each item on the graph
+	representing the cylinder size of each car. How do you stack up?</p>
     
 	<!-- SVG GOES HERE -->
 	<svg width=600 height=600>
@@ -106,7 +106,8 @@ var hxw = 600
 var x = d3.scaleLog().domain([10,150]).range([0,hxw]);
 var y = d3.scaleLog().domain([10,150]).range([hxw,0]);
 
-var tooltip = d3.select("body").append("div")	
+var tooltip = d3.select("body").append("div")
+	.id("tooltip")
     .attr("class", "tooltip")				
 	.style("opacity", 0);
 
@@ -120,7 +121,7 @@ d3.select("svg")
 	.attr("cx", function(d,i){ return x(d.averageCityMPG);})
 	.attr("cy", function(d,i){ return y(d.averageHighwayMPG);})
 	.attr("r",function(d,i){ return +d.engineCylinders + 2;})
-	.on("mouseover", function(d){ tooltip.styletooltip.opacity=1;})
+	.on("mouseover", function(d){ document.getElementById("tooltip").style.opacity=1;})
 	.on("mouseover", function(d){ tooltip.style("left", (d3.event.pageX) + "px").style("top", (d3.event.pageY - 28) + "px");})
 	.on("mouseover", function(d){ tooltip.text(d.make);});
 
