--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
   
+  <button class="w3-button w3-dark-grey" href="/index2.html">Next &nbsp;<i class="fa fa-arrow-right"></i></button>
 <!-- End Page Content -->
 </div>
 
