--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
   
-  <button class="w3-button w3-dark-grey" href="/index2.html">Next &nbsp;<i class="fa fa-arrow-right"></i></button>
+  <a class="w3-button w3-dark-grey" href="/index2.html">Next &nbsp;<i class="fa fa-arrow-right"></i></a>
 <!-- End Page Content -->
 </div>
 
