--- a/index2.html
+++ b/index2.html
@@ -78,7 +78,9 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
   
-  <button class="w3-button w3-dark-grey" href="/index2.html">Next &nbsp;<i class="fa fa-arrow-right"></i></button>
+  <a class="w3-button w3-dark-grey" href="/index3.html">Next &nbsp;<i class="fa fa-arrow-right"></i></a>
+  <a class="w3-button w3-dark-grey" href="/index.html">Prev &nbsp;<i class="fa fa-arrow-right"></i></a>
+
 <!-- End Page Content -->
 </div>
 
