--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <script src='https://d3js.org/d3.v5.min.js'></script>
-<title>Car Fuel Efficiency Data Visualization</title>
+<title>Mass Shootings in the United States</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -93,58 +93,64 @@ body {font-family: "Lato", sans-serif}
 <script>
 async function init() {
 <!-- CODE GOES HERE -->
-const data = await d3.csv("https://flunky.github.io/cars2017.csv", function(d){
+const parseDate = d3.timeParse("%Y-%m-%d");
+
+const data = await d3.csv("History_of_Mass_Shootings_in_the_USA", function(d){
 	return {
-		make: d.Make,
-		fuel: d.Fuel,
-		engineCylinders: d.EngineCylinders,
-		averageHighwayMPG: d.AverageHighwayMPG,
-		averageCityMPG: d.AverageCityMPG
+		date: parseDate(d.Date),
+		city: d.City,
+		state: d.State,
+		dead: d.Dead,
+		injured: d.Injured,
+		total: d.Total,
+		description : d.Description
 	};
 });
 
-var margin = 50
-var hxw = 600
+PlotLine(data);
+}
 
-var x = d3.scaleLog().domain([10,150]).range([0,hxw]);
-var y = d3.scaleLog().domain([10,150]).range([hxw,0]);
+function PlotLine(data){
 
-var tooltip = d3.select("svg").append("div")
-    .attr("class", "tooltip")				
-	.style("opacity", 0);
+var margin = {top: 10, right: 30, bottom: 30, left: 60},
+    width = 660 - margin.left - margin.right,
+    height = 600 - margin.top - margin.bottom;
 
-d3.select("svg")
-	.attr("width",hxw + 2*margin)
-	.attr("height",hxw + 2*margin)
+var svg = d3.select("svg")
+	.attr("width",width + margin.left + margin.right)
+	.attr("height",height + margin.top + margin.bottom)
 	.append("g")
-	.attr("transform","translate("+margin+","+margin+")")
-	.selectAll("circle").data(data)
-	.enter().append("circle")
-	.attr("cx", function(d,i){ return x(d.averageCityMPG);})
-	.attr("cy", function(d,i){ return y(d.averageHighwayMPG);})
-	.attr("r",function(d,i){ return +d.engineCylinders + 2;})
-	.on("mouseover", function(d){ tooltip.style("opacity",1);})
-	.on("mouseover", function(d){ tooltip.style("left", (d3.event.pageX) + "px").style("top", (d3.event.pageY - 28) + "px");})
-	.on("mouseover", function(d){ tooltip.text(d.make);});
-
-d3.select("svg").append("g")
-	.attr("transform","translate("+margin+","+margin+")")
-	.call(d3.axisLeft(y).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")))
-	.append("text")
-    .attr("fill", "black")
-    .attr("transform","translate("+0+","+(hxw/2)+")")
-    .text("Highway MPG");
-	
-d3.select("svg").append("g")
-	.attr("transform","translate("+margin+","+(hxw+margin)+")")
-	.call(d3.axisBottom(x).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")))
-	.append("text")
-    .attr("fill", "black")
-    .attr("transform","translate("+(hxw/2)+","+margin+")")
-    .text("City MPG");
-	
+	.attr("transform","translate("+margin.left+","+margin.top+")");
 
 
+
+
+var x = d3.scaleTime().domain([d3.min(data, function(d) { return d.date; }),
+							   d3.max(data, function(d) { return d.date; })])
+					  .range([ 0, width ]);
+
+//This is only for the number of deaths			  
+var y = d3.scaleLinear().domain([0, d3.max(data, function(d) { return +d.dead; })])
+						 .range([ height, 0 ]);
+	  
+
+
+
+svg.append("g")
+      .attr("transform", "translate(0," + height + ")")
+      .call(d3.axisBottom(x));
+
+svg.append("g")
+      .call(d3.axisLeft(y));
+
+svg.append("path")
+      .attr("fill", "none")
+      .attr("stroke", "steelblue")
+      .attr("stroke-width", 1.5)
+      .attr("d", d3.line()
+        .x(function(d) { return x(d.date) })
+        .y(function(d) { return y(d.dead) })
+        );
 
 <!-- CODE ENDS HERE-->
 }
