--- a/index2.html
+++ b/index2.html
@@ -141,7 +141,7 @@ svg.append("g")
       .call(d3.axisLeft(y));
 
 svg.append("path")
-	  .data(data)
+	  .datum(data)
       .attr("fill", "none")
       .attr("stroke", "steelblue")
       .attr("stroke-width", 1.5)
