--- a/index2.html
+++ b/index2.html
@@ -113,7 +113,12 @@ var svg = d3.select("svg")
 	.attr("width",width + margin.left + margin.right)
 	.attr("height",height + margin.top + margin.bottom)
 	.append("g")
-	.attr("transform","translate("+margin.left+","+margin.top+")");
+	.attr("transform","translate("+margin.left+","+margin.top+")")
+	.on("pointerenter pointermove", function(event){
+		
+	})
+    .on("pointerleave", pointerleft)
+    .on("touchstart", event => event.preventDefault());
 
 
 var x = d3.scaleTime().domain([d3.min(data, function(d) { return d.date; }),
@@ -158,6 +163,26 @@ svg.append("path")
         .x(function(d) { return x(d.date) })
         .y(function(d) { return y2(d.injured) })
         );
+		
+d3.select('body')
+.append('div')
+.attr('id', 'tooltip')
+.attr('style', 'position: absolute; opacity: 0;');
+
+d3.select('svg').selectAll('circle').data(data)
+	.join('circle')
+	.attr('r', 3)
+	.on('mouseover', function(d) {
+		d3.select('#tooltip').transition().duration(200).style('opacity', 1).text(d.dead)
+	})
+	.on('mouseout', function(d) {
+		d3.select('#tooltip').style('opacity', 0);
+	})
+	.on('mousemove', function() {
+		d3.select('#tooltip')
+		.style('left', (d3.event.pageX+10) + 'px')
+		.style('top', (d3.event.pageY+10) + 'px');
+	});
 
 <!-- CODE ENDS HERE-->
 }
