removing dup code

--- a/index2.html
+++ b/index2.html
@@ -113,12 +113,7 @@ var svg = d3.select("svg")
 	.attr("width",width + margin.left + margin.right)
 	.attr("height",height + margin.top + margin.bottom)
 	.append("g")
-	.attr("transform","translate("+margin.left+","+margin.top+")")
-	.on("pointerenter pointermove", function(event){
-		
-	})
-    .on("pointerleave", pointerleft)
-    .on("touchstart", event => event.preventDefault());
+	.attr("transform","translate("+margin.left+","+margin.top+")");
 
 
 var x = d3.scaleTime().domain([d3.min(data, function(d) { return d.date; }),
