--- a/index3.html
+++ b/index3.html
@@ -221,7 +221,17 @@ function display(data) {
 }
 
 // load data
-d3.csv('https://raw.githubusercontent.com/DHUIUC/dhuiuc.github.io/main/Mass_Shooting_State_Data.csv').then(display);
+d3.csv('https://raw.githubusercontent.com/DHUIUC/dhuiuc.github.io/main/Mass_Shooting_State_Data.csv',function(d){
+	return {
+		state : d.State,
+		dead : d.Dead,
+		injured: d.Injured,
+		occurrences : d.occurrences,
+		population : d.Population,
+		rate : d.Rate,
+		legislation : d.legislation
+	};
+}).then(display);
 
 <!-- CODE ENDS HERE-->
 </script>
