--- a/index3.html
+++ b/index3.html
@@ -231,10 +231,10 @@ d3.csv('https://raw.githubusercontent.com/DHUIUC/dhuiuc.github.io/main/Mass_Shoo
 		state : d.State,
 		dead : d.Dead,
 		injured: d.Injured,
-		occurrences : d.occurrences,
+		occurrences : d.Occurrences,
 		population : d.Population,
 		rate : d.Rate,
-		legislation : d.legislation
+		legislation : d.Legislation
 	};
 }).then(display);
 
