--- a/index3.html
+++ b/index3.html
@@ -173,7 +173,7 @@ function bubbleChart() {
       .append('g')
 
 	const fillColour = d3.scaleLinear()
-		.domain([0,(d3.max(rawData, function(d) { return +d.dead;}) + d3.max(rawData, function(d) { return +d.injured;} ))])
+		.domain([0,(d3.max(nodes, d => d.color)])
 		.range(["white", "red"]);
 
     bubbles = elements
