--- a/index3.html
+++ b/index3.html
@@ -10,6 +10,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 circle {fill: lightblue; stroke: black;}
+
+
 	
 div.tooltip {	
     position: absolute;			
@@ -173,7 +175,7 @@ function bubbleChart() {
       .append('g')
 
 	const fillColour = d3.scaleLinear()
-		.domain([0,(d3.max(nodes, d => d.color)])
+		.domain([0,(d3.max(nodes, d => d.color))])
 		.range(["white", "red"]);
 
     bubbles = elements
